--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HELLO!</title>
+    <link rel="stylesheet" href="css.css">
+</head>
+<body>
+    <div class="container">
+        <div class="main1">
+            <h1>Work creative</h1>
+            <h1>solution that</h1>
+            <h1>keep team</h1>
+            <button>Read More...</button>
+        </div>
+        <div class="main2">
 
+        </div>
+        <div class="main3">
+
+        </div>
+        <div class="main4">
+
+        </div>
+    </div>
+</body>
+</html>
